--- a/arxiv/2020_12_arxiv.html
+++ b/arxiv/2020_12_arxiv.html
@@ -192,7 +192,49 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05244">https://arxiv.org/abs/2012.05244</a></span> Boundary topological entanglement entropy in two and three dimensions ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12320">https://arxiv.org/abs/2011.12320</a></span> Boundary supersymmetry of 1+1 d fermionic SPT phases ***** (Juven Wang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13921">https://arxiv.org/abs/2011.13921</a></span> Unwinding Fermionic SPT Phases: Supersymmetry Extension ***** (Juven Wang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05617">https://arxiv.org/abs/2012.05617</a></span> A Natural Introduction to Fine-Tuning **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05617">https://arxiv.org/abs/2012.05617</a></span> A Natural Introduction to Fine-Tuning **</p><br>
+<p class="p1">20201214</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06459">https://arxiv.org/abs/2012.06459</a></span> Quantum supremacy and quantum phase transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06324">https://arxiv.org/abs/2012.06324</a></span> Dirac imprints on the g-factor anisotropy in graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06297">https://arxiv.org/abs/2012.06297</a></span> Effective theories and non-minimal couplings in low-dimensional systems ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05915">https://arxiv.org/abs/2012.05915</a></span> Symmetry constraints on superconductivity in twisted bilayer graphene: Fractional vortices, 4e condensates or non-unitary pairing ***** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06159">https://arxiv.org/abs/2012.06159</a></span> Strange Metal Solution in the Diagrammatic Theory for the 2d Hubbard Model (Aaram J. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06560">https://arxiv.org/abs/2012.06560</a></span> Isotropic Pauli-Limited Superconductivity in the Infinite-Layer Nickelate Nd0.775Sr0.225NiO2 (Harold Y. Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.12291">https://arxiv.org/abs/1912.12291</a></span> A model of quantum gravity with emergent spacetime ***** (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.04488">https://arxiv.org/abs/2009.04488</a></span> Variational Preparation of the Sachdev-Ye-Kitaev Thermofield Double</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.09506">https://arxiv.org/abs/2011.09506</a></span> Supersymmetry anomaly in the superconformal Wess-Zumino model **</p>
+<p class="p2"><br></p>
+<p class="p1">20201215</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07733">https://arxiv.org/abs/2012.07733</a></span> 3d Large N Vector Models at the Boundary</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06589">https://arxiv.org/abs/2012.06589</a></span> Quantum phase transition at non-zero doping in a random t-J model **** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.06752">https://arxiv.org/abs/2012.06752</a></span> Dilemma in strongly correlated materials: Hund’s metal vs relativistic Mott insulator (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07263">https://arxiv.org/abs/2012.07263</a></span> Screw dislocations in the X-cube fracton model (Kevin Slagle, Xie Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07529">https://arxiv.org/abs/2012.07529</a></span> Parafermionization, bosonization, and critical parafermionic theories (Yuan Yao, Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07273">https://arxiv.org/abs/2009.07273</a></span> On Exotic Consistent Anomalies in (1+1)d: A Ghost Story (Ying-Hsuan Li)</p>
+<p class="p2"><br></p>
+<p class="p1">20201216</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07991">https://arxiv.org/abs/2012.07991</a></span> Rotons in Anyon Superfluids (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07888">https://arxiv.org/abs/2012.07888</a></span> Axial Magnetoelectric Effect in Dirac semimetals (A. V. Balatsky)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08384">https://arxiv.org/abs/2012.08384</a></span> Gauging anomalous unitary operators (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07847">https://arxiv.org/abs/2012.07847</a></span> Molecular dipoles in designer honeycomb lattices (Finn Lasse Buessen, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07860">https://arxiv.org/abs/2012.07860</a></span> Magic angles and current-induced topology in twisted nodal superconductors ** (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08425">https://arxiv.org/abs/2012.08425</a></span> From the dipole of a crystallite to the polarization of a crystal (Raffaele Resta)<br>
+<a href="https://arxiv.org/abs/2012.07866"><span class="s1">https://arxiv.org/abs/2012.07866</span></a> Transport in the non-Fermi liquid phase of isotropic Luttinger semimetals ***** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08062">https://arxiv.org/abs/2012.08062</a></span> Mechanical Snell’s Law (June-Haak Ee, U-Rae Kim, Jungil Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20201217</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08908">https://arxiv.org/abs/2012.08908</a></span> Linking structures of doubly charged nodal surfaces in centrosymmetric superconductors (Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09097">https://arxiv.org/abs/2012.09097</a></span> Superconductivity in the Z2 kagome metal KV3Sb5</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08583">https://arxiv.org/abs/2012.08583</a></span> Modeling multiorbital effects in Sr2IrO4 under strain and a Zeeman field (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08543">https://arxiv.org/abs/2012.08543</a></span> Quantum phases of two-dimensional Z2 gauge theory coupled to spinless fermion matter *** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08592">https://arxiv.org/abs/2012.08592</a></span> Negative Thermal Hall Conductance in Two-Dimer Shastry-Sutherland Model with π-flux Dirac Triplon</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09601">https://arxiv.org/abs/2012.09601</a></span> Derivation of Jacobian Formula with Dirac Delta Function</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09050">https://arxiv.org/abs/2012.09050</a></span> Supersymmetry anomalies and the Wess-Zumino Model in a supergravity background</p>
+<p class="p2"><br></p>
+<p class="p1">20201218</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09809">https://arxiv.org/abs/2012.09809</a></span> Theory of Dirac spin liquids on spin-S triangular lattice: possible application to α-CrOOH(D) ***** (Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09339">https://arxiv.org/abs/2012.09339</a></span> Low temperature T-linear resistivity due to umklapp scattering from a critical mode *** (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13921">https://arxiv.org/abs/2011.13921</a></span> Unwinding Fermionic SPT Phases: Supersymmetry Extension **** (Juven Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
