--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Articles related to my works:
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Junhyun Lee, Eun-Gook Moon<br>
-			<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>
+			<a href="https://journals.aps.org/prb/accepted/29074YfdC2c12169c7a0568291089b40abf85e9dc">Accepted for publication in Phy. Rev. B</a> (<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>)
 		</li><li><div>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
