--- a/arxiv/2020_12_arxiv.html
+++ b/arxiv/2020_12_arxiv.html
@@ -234,7 +234,49 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20201218</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09809">https://arxiv.org/abs/2012.09809</a></span> Theory of Dirac spin liquids on spin-S triangular lattice: possible application to α-CrOOH(D) ***** (Chong Wang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09339">https://arxiv.org/abs/2012.09339</a></span> Low temperature T-linear resistivity due to umklapp scattering from a critical mode *** (Patrick A. Lee)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13921">https://arxiv.org/abs/2011.13921</a></span> Unwinding Fermionic SPT Phases: Supersymmetry Extension **** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13921">https://arxiv.org/abs/2011.13921</a></span> Unwinding Fermionic SPT Phases: Supersymmetry Extension **** (Juven Wang)</p><br>
+<p class="p1">20201221</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.10442">https://arxiv.org/abs/2012.10442</a></span> Competing magnetic orders and multipolar Weyl fermions in 227 pyrochlore iridates *** (Tobias Meng, Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09875">https://arxiv.org/abs/2012.09875</a></span> Physics of the Inverted Harmonic Oscillator: From the lowest Landau level to event horizons ***** (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09885">https://arxiv.org/abs/2012.09885</a></span> Strain-induced quantum phase transitions in magic angle graphene ** (Michael P. Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.10109">https://arxiv.org/abs/2012.10109</a></span> <b>Non-equilibrium dynamics in Holography</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09866">https://arxiv.org/abs/2012.09866</a></span> A microscopic Ginzburg–Landau theory and singlet ordering in Sr2RuO4 (Steven H. Simon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.09937">https://arxiv.org/abs/2012.09937</a></span> Vortex Dynamics, Pinning, and Magic Angles on Moir ́e Patterns ***</p>
+<p class="p2"><br></p>
+<p class="p1">20201222</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.10801">https://arxiv.org/abs/2012.10801</a></span> Bogoliubov-Fermi surface with inversion symmetry and electron-electron interactions: relativistic analogies and lattice theory ***** (Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11592">https://arxiv.org/abs/2012.11592</a></span> Fractons with Twisted Boundary Conditions and Their Symmetries *** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.10450">https://arxiv.org/abs/2012.10450</a></span> RG Flows with Global Symmetry Breaking and Bounds from Chaos ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.10628">https://arxiv.org/abs/2012.10628</a></span> A sharp transition in quantum chaos and thermodynamics of mass deformed SYK model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11143">https://arxiv.org/abs/2012.11143</a></span> Quantum Criticality in Topological Superfluids/Superconductors: Surface criticality, Thermal properties, and Lifshitz Majorana fields ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.10588">https://arxiv.org/abs/2012.10588</a></span> Majorana bound states in vortex lattices on iron-based superconductors (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11287">https://arxiv.org/abs/2012.11287</a></span> Topological Superconductivity in Multifold Fermion Metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00175">https://arxiv.org/abs/2006.00175</a></span> Non supersymmetric fermion boson symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.14613">https://arxiv.org/abs/2009.14613</a></span> A GROUP-THEORIST’S PERSPECTIVE ON SYMMETRY GROUPS IN PHYSICS ***</p>
+<p class="p2"><br></p>
+<p class="p1">20201223</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11611">https://arxiv.org/abs/2012.11611</a></span> A composite particle construction of the Fibonacci fractional quantum Hall state *** (Eduardo Fradkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11941">https://arxiv.org/abs/2012.11941</a></span> Topological and geometrical aspects of band theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11601">https://arxiv.org/abs/2012.11601</a></span> Temperature Dependent Energy Diffusion in Chaotic Spin Chains ***** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11777">https://arxiv.org/abs/2012.11777</a></span> Pairing by a dynamical interaction in a metal ***** (Andrey V. Chubukov, Artem Abanov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12162">https://arxiv.org/abs/2012.12162</a></span> Generalized group-theoretic coherent states</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11703">https://arxiv.org/abs/2012.11703</a></span> Topological field theory approach to intermediate statistics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07529">https://arxiv.org/abs/2012.07529</a></span> Parafermionization, bosonization, and critical parafermionic theories (Yuan Yao, Akira Furusaki)</p>
+<p class="p2"><br></p>
+<p class="p1">20201224</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12281">https://arxiv.org/abs/2012.12281</a></span> Quantum Phases of Matter on a 256-Atom Programmable Quantum Simulator ***** (Soonwon Choi, Subir Sachdev, Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12602">https://arxiv.org/abs/2012.12602</a></span> An improved holographic nodal line semimetal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12280">https://arxiv.org/abs/2012.12280</a></span> Theory of weak symmetry breaking of translations in Z2 topologically ordered states and its relation to topological superconductivity from an exact lattice Z2 charge-flux attachment</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12283">https://arxiv.org/abs/2012.12283</a></span> Quantum Monte Carlo Simulation of Generalized Kitaev Models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12491">https://arxiv.org/abs/2012.12491</a></span> Superconducting instabilities in a spinful SYK model *** (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12287">https://arxiv.org/abs/2012.12287</a></span> The functional-integral approach to Gaussian fluctuations in Eliashberg theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12326">https://arxiv.org/abs/2012.12326</a></span> Electric Forces in the Charged SYK Model *** (Leonard Susskind)</p>
+<p class="p2"><br></p>
+<p class="p1">20201225</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12906">https://arxiv.org/abs/2012.12906</a></span> Topology of SO(5)-monopoles and three-dimensional, stable Dirac semimetals **** (Shouvik Sur, Pallab Goswami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13397">https://arxiv.org/abs/2012.13397</a></span> Entanglement entropy and edge modes in topological string theory II: The dual gauge theory story ***** (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13401">https://arxiv.org/abs/2012.13401</a></span> Matter representations from geometry: under the spell of Dynkin ** (Monica Jinwoo Kang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.12392">https://arxiv.org/abs/2010.12392</a></span> Fermionic Rational Conformal Field Theories and Modular Linear Differential Equations ** (Kimyeong Lee, Sungjay Lee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
