--- a/arxiv/2020_12_arxiv.html
+++ b/arxiv/2020_12_arxiv.html
@@ -276,7 +276,12 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.12906">https://arxiv.org/abs/2012.12906</a></span> Topology of SO(5)-monopoles and three-dimensional, stable Dirac semimetals **** (Shouvik Sur, Pallab Goswami)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13397">https://arxiv.org/abs/2012.13397</a></span> Entanglement entropy and edge modes in topological string theory II: The dual gauge theory story ***** (Manki Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13401">https://arxiv.org/abs/2012.13401</a></span> Matter representations from geometry: under the spell of Dynkin ** (Monica Jinwoo Kang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.12392">https://arxiv.org/abs/2010.12392</a></span> Fermionic Rational Conformal Field Theories and Modular Linear Differential Equations ** (Kimyeong Lee, Sungjay Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.12392">https://arxiv.org/abs/2010.12392</a></span> Fermionic Rational Conformal Field Theories and Modular Linear Differential Equations ** (Kimyeong Lee, Sungjay Lee)</p><br>
+<p class="p1">20201229</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13761">https://arxiv.org/abs/2012.13761</a></span> Compatible Braidings with Hopf Links, Multi-loop, and Borromean Rings in (3 + 1)-Dimensional Spacetime</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.14416">https://arxiv.org/abs/2012.14416</a></span> Clock-dependent spacetime ***** (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13397">https://arxiv.org/abs/2012.13397</a></span> Entanglement entropy and edge modes in topological string theory II: The dual gauge theory story *** (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13595">https://arxiv.org/abs/2012.13595</a></span> THE HEAT KERNEL OF THE ASYMMETRIC QUANTUM RABI MODEL **</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
