--- a/arxiv/2021_01_arxiv.html
+++ b/arxiv/2021_01_arxiv.html
@@ -125,7 +125,57 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-<p class="p1">2021010103</p>
+<p class="p1">20210101</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.14478">https://arxiv.org/abs/2012.14478</a></span> The Half-Full Landau Level *** (Bertrand I. Halperin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.14508">https://arxiv.org/abs/2012.14508</a></span> Optical properties of massive anisotropic tilted Dirac systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15122">https://arxiv.org/abs/2012.15122</a></span> Wave function geometry of band crossing points in two-dimensions *** (Jun-Won Rhim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15132">https://arxiv.org/abs/2012.15132</a></span> Geometric characterization of anomalous Landau levels of isolated flat bands *** (Jun-Won Rhim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15628">https://arxiv.org/abs/2012.15628</a></span> Higher-Order Nonlinear Anomalous Hall Effects Induced by Berry Curvature Multipoles *** (Hoi Chun Po, K. T. Law)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15798">https://arxiv.org/abs/2012.15798</a></span> Rescuing a black hole in the large-q coupled SYK model (Xiao-Liang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15845">https://arxiv.org/abs/2012.15845</a></span> Self-dual criticality in three-dimensional Z2 gauge theory with matter *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15679">https://arxiv.org/abs/2012.15679</a></span> Linear-in-T resistivity from semi-holographic non-Fermi liquid models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15631">https://arxiv.org/abs/2012.15631</a></span> On tensor network representations of the (3+1)d toric code</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15841">https://arxiv.org/abs/2012.15841</a></span> Extreme response of Weyl-Kondo semimetal to Zeeman coupling (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.03175">https://arxiv.org/abs/1812.03175</a></span> Elasticity tetrads, mixed axial-gravitational anomalies, and 3+1d quantum Hall effect *** (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.06466">https://arxiv.org/abs/2011.06466</a></span> Combined Lorentz symmetry (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1803.09234">https://arxiv.org/abs/1803.09234</a></span> Tetrads in solids: from elasticity theory to topological quantum Hall systems and Weyl fermions *** (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.02931">https://arxiv.org/abs/2010.02931</a></span> Quantum Information for Particle Theorists ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.14662">https://arxiv.org/abs/2012.14662</a></span> Lectures on Symplectic Geometry, Poisson Geometry, Deformation Quantization and Quantum Field Theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210105</p>
+<p class="p3"><a href="https://arxiv.org/abs/2101.01068">https://arxiv.org/abs/2101.01068</a><span class="s2"> Multilayer Haldane model **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.00014">https://arxiv.org/abs/2101.00014</a></span> Bad metallic transport in geometrically frustrated models ***** (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01018">https://arxiv.org/abs/2101.01018</a></span> Anomaly constraint on chiral central charge of (2+1)d TQFT ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01087">https://arxiv.org/abs/2101.01087</a></span> Quantum criticality and sequential destruction of spin-orbital Kondo entanglement **** (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01171">https://arxiv.org/abs/2101.01171</a></span> Superconductivity from Luttinger surfaces: Emergent ∞-body SYK physics *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.00852">https://arxiv.org/abs/2101.00852</a></span> The superconductor-insulator transition in absence of disorder **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.13994">https://arxiv.org/abs/2010.13994</a></span> Comparison between renormalization group derived emergent dual holography and string theory based holographic duality *** (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09742">https://arxiv.org/abs/2010.09742</a></span> Excitation spectra of quantum matter without quasiparticles I: Sachdev-Ye-Kitaev models ***** (Haoyu Guo, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.02254">https://arxiv.org/abs/2010.02254</a></span> Fracton phases via exotic higher-form symmetry-breaking *** (Leo Radzihovsky, and Michael Hermele)</p>
+<p class="p2"><br></p>
+<p class="p1">20210106</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01180">https://arxiv.org/abs/2101.01180</a></span> Majorana corner states in square and Kagome quantum spin liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01690">https://arxiv.org/abs/2101.01690</a></span> Efficient Mitigation of Depolarizing Errors in Quantum Simulations ** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01701">https://arxiv.org/abs/2101.01701</a></span> Meissner effect in nonstandard superconductors</p>
+<p class="p2"><br></p>
+<p class="p1">20210107</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01790">https://arxiv.org/abs/2101.01790</a></span> Current Switching of Valley Polarization in Twisted Bilayer Graphene *** (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01733">https://arxiv.org/abs/2101.01733</a></span> Symmetry-protected Nodal Points and Nodal Lines in Magnetic Materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02197">https://arxiv.org/abs/2101.02197</a></span> Bose-Luttinger Liquids ***** (T. Senthil, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01737">https://arxiv.org/abs/2101.01737</a></span> Measurement of Electronic Thermal Conductance in Low-Dimensional Materials with Graphene Nonlocal Noise Thermometry *** (Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01720">https://arxiv.org/abs/2101.01720</a></span> A Z3 quantum double in a superconducting wire array **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01724">https://arxiv.org/abs/2101.01724</a></span> Fractonic critical point proximate to a higher-order topological insulator: How UV blend with IR? ***** (Taylor L. Hughes, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01780">https://arxiv.org/abs/2101.01780</a></span> Introduction to Solid State Physics *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01892">https://arxiv.org/abs/2101.01892</a></span> Holographic Axion Model: a simple gravitational tool for quantum matter</p>
+<p class="p2"><br></p>
+<p class="p1">20210108</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02210">https://arxiv.org/abs/2101.02210</a></span> Higher-form symmetries and ’t Hooft anomalies in non-equilibrium systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02389">https://arxiv.org/abs/2101.02389</a></span> Quantum Field Theory of Correlated Bose-Einstein condensates: I. Basic Formalism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02396">https://arxiv.org/abs/2101.02396</a></span> Quantum Field Theory of Correlated Bose-Einstein condensates: II. Ward-Takahashi Identities and Correlation Functions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02213">https://arxiv.org/abs/2101.02213</a></span> Probing the spin structure of the fractional quantum Hall magnetoroton with polarized Raman scattering ** (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02408">https://arxiv.org/abs/2101.02408</a></span> Geometry-induced topological superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15860">https://arxiv.org/abs/2012.15860</a></span> Ultra Unification ***** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02652">https://arxiv.org/abs/2101.02652</a></span> Universality in Phyllotaxis: a Mechanical Theory (Leonid S. Levitov)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
