--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-pdf version of CV: <a href="SangEun_Han_Curriculum_Vitae.pdf">here</a>
+pdf version of CV: <a href="20210109_SangEun_Han_Curriculum_Vitae">here (updated at 2021/01/09)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
