--- a/arxiv/2021_01_arxiv.html
+++ b/arxiv/2021_01_arxiv.html
@@ -175,7 +175,43 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02213">https://arxiv.org/abs/2101.02213</a></span> Probing the spin structure of the fractional quantum Hall magnetoroton with polarized Raman scattering ** (Dam Thanh Son)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02408">https://arxiv.org/abs/2101.02408</a></span> Geometry-induced topological superconductivity</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15860">https://arxiv.org/abs/2012.15860</a></span> Ultra Unification ***** (Juven Wang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02652">https://arxiv.org/abs/2101.02652</a></span> Universality in Phyllotaxis: a Mechanical Theory (Leonid S. Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02652">https://arxiv.org/abs/2101.02652</a></span> Universality in Phyllotaxis: a Mechanical Theory (Leonid S. Levitov)</p><br>
+<p class="p1">20210111</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1808.01187">https://arxiv.org/abs/1808.01187</a></span> Graphene properties from curved space Dirac equation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.03010">https://arxiv.org/abs/2101.03010</a></span> Negative-curvature spacetime solutions for graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.03075">https://arxiv.org/abs/2101.03075</a></span> Critical points in the RPN−1 model</p>
+<p class="p2"><br></p>
+<p class="p1">20210112</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.03794">https://arxiv.org/abs/2101.03794</a></span> Flatband generator in two dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.03177">https://arxiv.org/abs/2101.03177</a></span> New Heat Kernel Method in Lifshitz Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.03830">https://arxiv.org/abs/2101.03830</a></span> An overview of the Hamilton–Jacobi theory: the classical and geometrical approaches and some extensions and applications</p>
+<p class="p2"><br></p>
+<p class="p1">20210113</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04322">https://arxiv.org/abs/2101.04322</a></span> General corner charge formula in two-dimensional Cn-symmetric higher-order topological insulators *** (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04115">https://arxiv.org/abs/2101.04115</a></span> Yang-Lee edge singularity triggered entanglement transition ***** (Shao-Kai Jian, Zhen Bi, Xiao Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04136">https://arxiv.org/abs/2101.04136</a></span> Nonlinear terahertz electro-optical responses in metals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04467">https://arxiv.org/abs/2101.04467</a></span> Covariant canonical gauge theory of gravitation for fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04241">https://arxiv.org/abs/2101.04241</a></span> On the Development of Effective Field Theory ***** (Steven Weinberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04168">https://arxiv.org/abs/2101.04168</a></span> This Week’s Finds in Mathematical Physics <i>Weeks 1 to 50 (January 19, 1993 </i>to <i>March 12, 1995)</i></p>
+<p class="p2"><br></p>
+<p class="p1">20210114</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05058">https://arxiv.org/abs/2101.05058</a></span> Fractional corner magnetization of collinear antiferromagnets (Haruki Watanabe, Hoi Chun Po, Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05015">https://arxiv.org/abs/2101.05015</a></span> Deformations, relaxation and broken symmetries in liquids, solids and glasses: a unified topological field theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04685">https://arxiv.org/abs/2101.04685</a></span> Functional renormalization group study of the Kitaev-Γ model on the honeycomb lattice and emergent incommensurate magnetic correlations ** (Finn Lasse Buessen, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05154">https://arxiv.org/abs/2101.05154</a></span> Electric charge renormalization to all orders</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05170">https://arxiv.org/abs/2101.05170</a></span> A pedagogical derivation of dynamical susceptibilities</p>
+<p class="p2"><br></p>
+<p class="p1">20210115</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05448">https://arxiv.org/abs/2101.05448</a></span> Realization of supersymmetry and its spontaneous breaking in quantum Hall edges (Kun Yang) ***</p>
+<p class="p3"><a href="https://arxiv.org/abs/2101.05427">https://arxiv.org/abs/2101.05427</a><span class="s2"> Topological Euler insulators ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05528">https://arxiv.org/abs/2101.05528</a></span> Real scalar phase transitions: a nonperturbative analysis **</p>
+<p class="p3"><a href="https://arxiv.org/abs/2012.15860">https://arxiv.org/abs/2012.15860</a><span class="s2"> Ultra Unification *** (Juven Wang)</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05289">https://arxiv.org/abs/2101.05289</a></span> Wilson Loops and Area Laws in Lattice Gauge Theory Tensor Networks **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05627">https://arxiv.org/abs/2101.05627</a></span> Superconducting critical temperature in the extended SYK model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05794">https://arxiv.org/abs/2101.05794</a></span> Correlated interaction effects in three-dimensional semi-Dirac semimetal (Jing-Rong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05230">https://arxiv.org/abs/2101.05230</a></span> Brief lectures on duality, integrability and deformations *</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383">https://arxiv.org/abs/2009.13383</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term</p>
+<p class="p3"><a href="https://arxiv.org/abs/2101.05331">https://arxiv.org/abs/2101.05331</a><span class="s2"> The history of LHCb</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
